# traceviz

./: .git-cliff.toml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-03-13-release-ci-design.md
scripts/: generate-formula.sh  tag-release.sh
tests/: test_analyzer.py  test_cli.py  test_generate_formula.py  test_ip_lookup.py  test_main_module.py  test_server.py  test_tracer.py
traceviz/: __init__.py  __main__.py  analyzer.py  cli.py  ip_lookup.py  server.py  tracer.py
traceviz/static/: app.js  i18n.js  index.html  style.css
