[project]
name = "traceviz"
dynamic = ["version"]
description = "Traceroute visualization on a world map"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "TraceViz Contributors" }]
keywords = ["traceroute", "network", "visualization", "map"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: System :: Networking",
]
dependencies = [
    "flask>=3.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/shixy96/traceviz"
Repository = "https://github.com/shixy96/traceviz"
Issues = "https://github.com/shixy96/traceviz/issues"

[project.scripts]
traceviz = "traceviz.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "traceviz/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["traceviz"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"traceviz/cli.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["traceviz"]
omit = ["traceviz/static/*"]

[tool.coverage.report]
show_missing = true
